# Fyragic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
EngineCore/: .gitignore  CMakeLists.txt  FyragicEngine.sln  FyragicEngine.vcxproj  FyragicEngine.vcxproj.filters
EngineCore/Source/: Fyragic.h  Test.cpp  Test.h
EngineCore/Source/Fyragic/: Application.cpp  Application.h  EntryPoint.h  EtherCore.h  Log.cpp  Log.h
FyragicEngine/: .gitignore
GamesBox/: CMakeLists.txt
GamesBox/Source/: Sandbox.cpp
GamesEnvironment/: GamesEnvironment.vcxproj
